k8s/infrastructure/controllers/portainer/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portainer-httproute
  namespace: portainer
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: gateway
      sectionName: https-wc-talmox-hera-home-karlsen-fr
  hostnames:
    - portainer.talmox.hera.home.karlsen.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portainer
          port: 9000
